--- a/style.css
+++ b/style.css
@@ -1,5 +1,59 @@
+:root {
+  --color_white: rgb(255, 255, 255);
+  --color_gold: rgb(255, 215, 0);
+  --color_green: rgb(45, 252, 26);
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+body {
+  min-height: 100vh;
+  background: linear-gradient(to right, #141e30, #243b55);
+}
+h1 {
+  font-size: 4rem;
+  color: var(--color_gold);
+}
+.container {
+  width: 90%;
+  max-width: 34.37rem;
+  margin-top: 3rem;
+  max-height: 90vh;
+  border-radius: 1rem;
+  padding: 3rem;
+}
+.wheel_box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#spinWheel {
+  max-height: inherit;
+  width: inherit;
+}
+#spin_btn {
+  width: 26%;
+  height: 26%;
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  color: var(--color_white);
+  background: linear-gradient(to right, #fc4a1a, #f7b733);
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#text {
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+  color: var(--color_gold);
+  margin-top: 1.5rem;
+}
+.fa-solid {
+  font-size: 4rem;
+  color: var(--color_green);
 }
