--- a/style.css
+++ b/style.css
@@ -13,16 +13,24 @@ body {
   background: linear-gradient(to right, #141e30, #243b55);
 }
 h1 {
+  position: absolute;
+  top: 10%;
+  left: 50%;
   font-size: 4rem;
   color: var(--color_gold);
+  transform: translate(-50%, -50%);
 }
 .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 90%;
   max-width: 34.37rem;
   margin-top: 3rem;
   max-height: 90vh;
   border-radius: 1rem;
   padding: 3rem;
+  transform: translate(-50%, -50%);
 }
 .wheel_box {
   position: relative;
@@ -32,8 +40,12 @@ h1 {
 #spinWheel {
   max-height: inherit;
   width: inherit;
+  transform: rotate(270deg);
 }
 #spin_btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 26%;
   height: 26%;
   font-size: 1.8rem;
@@ -44,6 +56,8 @@ h1 {
   background: linear-gradient(to right, #fc4a1a, #f7b733);
   border: 0;
   border-radius: 50%;
+  transform: translate(-50%, -50%);
+
   cursor: pointer;
 }
 #text {
@@ -54,6 +68,10 @@ h1 {
   margin-top: 1.5rem;
 }
 .fa-solid {
+  position: absolute;
+  top: -8%;
+  left: 43.7%;
+  transform: rotate(-225deg);
   font-size: 4rem;
   color: var(--color_green);
 }
