--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 body {
   min-height: 100vh;
-  background: linear-gradient(to right, #141e30, #243b55);
+  background: #243b55;
 }
 h1 {
   position: absolute;
